--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,9 +208,12 @@ body {
     height: 30px;  
     top:20px; 
 }
+
 .flag{
     position: relative;
     right:22px;
+   
+  
 }
 
 
@@ -260,11 +263,88 @@ body {
 
 /*  */
 #add-icon{
-    width:170px; 
+    width:135px; 
     position:relative;
-     right:20px;
-      top:-12px;
+     right: 10px;
+     vertical-align: middle; 
+      
 }
+
+  .add-icon-container {
+    display: inline-block;
+    width: 10px; 
+    height: 8px; 
+    border-radius: 50%;
+    background-color: #f0f0f0; 
+    display: flex;
+    position: relative;
+    bottom: 120px;
+    left: -10px; 
+    top:-120px; 
+   
+}
+  
+  .add-icon-container:hover {
+    background-color: #d4d4d4; 
+  }
+  
+  .add-icon {
+    width: 40%;
+    height: auto; 
+  }
+  
+  /* Responsiveness */
+  @media (max-width: 600px) {
+    .add-icon-container {
+      width: 40px; 
+      height: 40px;
+    }
+  
+    .add-icon {
+      width: 50%;
+    }
+  }
+
+  /*  */
+  .add-icon-container {
+    display: inline-block;
+    width: 30px; 
+    height: 30px; 
+    border-radius: 50%; 
+    background-color: #0b600e; 
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    color: white;
+    font-size: 24px; 
+    font-weight: bold; 
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
+    transition: background-color 0.3s;
+     position: relative;
+     bottom:18px;
+     
+  }
+  
+  .add-icon-container:hover {
+    background-color: #ffd700 ;
+    width: 38px;
+    height: 38px;
+  
+  }
+  
+  /* Responsivité pour petits écrans */
+  @media (max-width: 600px) {
+    .add-icon-container {
+      width: 40px;
+      height: 40px;
+    }
+  
+    .add-icon {
+      font-size: 20px; 
+    }
+  }
+  
+  
 /*  */
 /* card.innerHTML = `
 <div class="card-inner">
@@ -310,6 +390,8 @@ body {
 </div>
 `;
  */
+
+
 
 
 
