--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,12 +62,14 @@ input, select, button {
     background-color: var(--bg-color);
     color: var(--text-color);
     border-radius: 4px;
+    
 }
 
 button {
     background-color: var(--accent-color);
     cursor: pointer;
     transition: background-color 0.3s, transform 0.1s;
+    margin-left: 3px;
 }
 
 button:hover {
@@ -132,8 +134,8 @@ button:active {
 }
 
 .player-card, .add-player-btn {
-    width: 200px;
-    height: 300px;
+    width: 160px;
+    height: 320px;
     background: var(--card-gradient);
     border: 1px solid var(--border-color);
     border-radius: 8px;
@@ -178,8 +180,8 @@ button:active {
 
 .player-rating {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 0px;
+    left: 2px;
     font-size: 24px;
     font-weight: bold;
     color: #f4d03f;
@@ -187,8 +189,8 @@ button:active {
 
 .player-position-label {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 5.8px;
+    right: 3px;
     font-size: 18px;
     font-weight: bold;
     color: #f4d03f;
@@ -202,14 +204,17 @@ button:active {
 }
 
 .player-flag {
-    top: 45px;
-    left: 10px;
+    position: relative;
+    /* top: 45px; */
+    bottom:0px;
+    right:50px;
     border-radius: 50%;
 }
 
 .player-logo {
-    top: 45px;
-    right: 10px;
+    position: relative;
+    bottom: 28px;
+    right: -50px;
     border-radius: 50%;
 }
 
@@ -275,6 +280,7 @@ button:active {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
+   
 }
 
 .success-message {
