--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,11 +100,15 @@ button:active {
 }
 
 .team-logo {
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border-radius: 50%;
-}
+    width: 40px;  
+    height: 40px;  
+    background-image: url('../images/logo.webp');
+    background-size: cover; 
+    background-position: center;  
+    border-radius: 50%;  
+    display: inline-block;  
+  }
+  
 
 .formation-grid {
     display: flex;
